--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <div class="container">
-            <img class="qrcode" src="/QrCode/src/images/image-qr-code.png" alt="QrCode">
+            <img class="qrcode" src="./QrCode/src/images/image-qr-code.png" alt="QrCode">
             <div class="caixa">
                 <h1 title="titulo"><span>Improve your front-end</span><br>skills by building projects</h1><br>
                 <p class="paragrafo">Scan the QR code to visit Frontend<br>
